feat(t303): complete persisted static model types